--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="col-2-6">
         <h1>Turtle emulator</h1>
         <h2>Last commands:</h2>
-        <p id="history" class="history"></p>
+        <p id="history" class="history-field"></p>
     </div>
 </div>
 <div class="row">
